@@ -32,7 +32,9 @@ Revision history for Perl extension Net::SSLeay.
     - Net::SSLeay::P_ASN1_TIME_set_isotime
     - Net::SSLeay::P_ASN1_TIME_put2string
     Fixed a problem with set_proxy where the password was not properly
-    set. The code to do this went missing at some stage. Reported by Ulrich Weber via RT.
+    set. The code to do this went missing at some stage. Reported by Ulrich
+    Weber via RT.
+    Further improvements to testing time functions
 
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
